# pytest_book

./: .pre-commit-config.yaml  README.md  README_pt_br.md  pyproject.toml
cards_proj/: pyproject.toml
cards_proj/src/cards/: api.py  cli.py  db.py
tests/ch02/: test_card.py  test_card_mod.py  test_classes.py  test_exceptions.py  test_helper.py
tests/ch03/: conftest.py  test_status.py
