[tool.poetry]
name = "pytest-book"
version = "0.1.0"
description = "This repo contains the exercises from Python Testing with pytest (2nd ed.)"
authors = ["Greg Oliveira <gregoryomelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
